statics/www/admin2/index.css
html, body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

#page-list-posts {
  min-height: 100vh;
  background-color: #f6f7f7;
}

#page-list-posts .workspace {
  max-width: 900px;
  margin: 0 auto;
  padding: 80px 0;
}

#page-list-posts .list-posts .entry {
  border: solid rgb(220, 220, 222) 1px;
  padding: 16px;
  background-color: white;
  margin-bottom: -1px;
  display: block;
  text-decoration: none;
  color: #333;
}

#page-list-posts .list-posts .entry:hover {
  color: rgb(100, 105, 112);
  cursor: pointer;
}

#page-list-posts .list-posts .entry .entry-title{
  font-weight: 600;
  font-size: 20px;
}

#page-edit-post .workspace .editor-title {
  box-sizing: border-box;
  width: 100%;
  font-weight: bold;
  font-size: 36px;
  border: none;
  outline: none;
}

#page-edit-post .workspace {
  max-width: 900px;
  margin: 0 auto;
  padding: 80px 0;
}



.post-type-filter {
  border-bottom: solid silver 1px;
  margin-bottom: 16px;
  /*background-color: white;*/
}

.post-type-filter .nav {
  display: inline-block;
  min-width: 100px;
  /*border-right: solid rgb(220, 220, 222) 1px;*/
  padding: 16px;
  font-weight: bold;
  color: rgb(34, 113, 177);
  text-decoration: none;
  border-bottom: solid transparent 2px;
}

.post-type-filter .nav.router-link-active {
  color: black;
  border-bottom-color: black;
}

.post-type-filter .nav .counter {
  color: rgb(44, 51, 56);
  font-weight: bold;
  border: solid 1px rgb(167, 170, 173);
  border-radius: 12px;
  padding: 1px 6px;
}

.btn {
  border: none;
  margin: 0px;
  padding: 8px 16px;
  text-align: center;
  text-transform: uppercase;
  /*box-shadow: 0 0 20px #eee;*/
  border-radius: 10px;
  display: inline-block;
  cursor: pointer;
  text-decoration: none;
}

.btn-inv {
  background-color: transparent;
  color: white;
}
.btn-inv:hover {
  box-shadow: 0 0 4px #eee;
}


.btn-grad {background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5  51%, #00d2ff  100%)}
.btn-grad {
  transition: 0.5s;
  background-size: 200% auto;
  color: white;
}
.btn-grad:hover {
  background-position: right center; /* change the direction of the change here */
  color: #fff;
  text-decoration: none;
}


/** source: https://cssloaders.github.io/ *************************************/
.loader {
  text-align: center;
}

.loader:before {
  content: '';
  width: 24px;
  height: 24px;
  border: 4px solid dodgerblue;
  border-bottom-color: transparent;
  border-radius: 50%;
  display: inline-block;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
  vertical-align: middle;
  margin-right: 12px;
}

.loader.small:before {
  width: 12px;
  height: 12px;
  margin-right: 0;
  border-width: 3px;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

